# ChordNova

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  REVAMP_PHASE_1_SUMMARY.md  mainpage.dox
doc/html/: annotated.html  bigramchordstatistics_8h_source.html  chorddata_8h_source.html  chordlibrary_8h_source.html  chordnova.html  chordnovarw.html  chordstatistics_8h_source.html  circleoffifths_8h_source.html  class_interface-members.html  class_interface.html  classchordnova_1_1chord_1_1_chord-members.html  classchordnova_1_1chord_1_1_chord.html  classchordnova_1_1chord_1_1_chord_data-members.html  classchordnova_1_1chord_1_1_chord_data.html  classchordnovaexception_1_1_chord_nova_exception_base-members.html  classchordnovaexception_1_1_chord_nova_exception_base.html  classchordnovaexception_1_1_chord_nova_generic_exception-members.html  classchordnovaexception_1_1_chord_nova_generic_exception.html  classchordnovarw_1_1model_1_1_bigram_chord_statistics-members.html  classchordnovarw_1_1model_1_1_bigram_chord_statistics.html  classchordnovarw_1_1model_1_1_c_o_f_unit-members.html  classchordnovarw_1_1model_1_1_c_o_f_unit.html  classchordnovarw_1_1model_1_1_chroma-members.html  classchordnovarw_1_1model_1_1_chroma.html  classchordnovarw_1_1model_1_1_ordered_chord-members.html  classchordnovarw_1_1model_1_1_ordered_chord.html  classchordnovarw_1_1model_1_1_ordered_chord_statistics-members.html  classchordnovarw_1_1model_1_1_ordered_chord_statistics.html  classchordnovarw_1_1model_1_1_pitch-members.html  classchordnovarw_1_1model_1_1_pitch.html  classchordnovarw_1_1model_1_1_pitch_class-members.html  classchordnovarw_1_1model_1_1_pitch_class.html  classchordnovarw_1_1model_1_1_pitch_class_set-members.html  classchordnovarw_1_1model_1_1_pitch_class_set.html  classchordnovarw_1_1model_1_1_pitch_iterable-members.html  classchordnovarw_1_1model_1_1_pitch_iterable.html  classchordnovarw_1_1model_1_1_pitch_set-members.html  classchordnovarw_1_1model_1_1_pitch_set.html  classchordnovarw_1_1model_1_1_semitone-members.html  classchordnovarw_1_1model_1_1_semitone.html  (+41 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  pages_0.js  pages_1.js  pages_2.js  (+15 more)
img/: images.pptx
main/: CMakeLists.txt  chord.cpp  chord.h  chorddata.cpp  chorddata.h  functions.cpp  functions.h  main.cpp  maingui.cpp
maintest/: CMakeLists.txt  find_vec.cpp  get_progression.cpp  legacymodel.cpp  parse_notes.cpp
src/: CMakeLists.txt  logger.cpp  utility.cpp
src/algorithm/: CMakeLists.txt  analysis.cpp  progression.cpp  sorting.cpp  substitution.cpp  validation.cpp
src/include/: constant.h  exception.h  i18n.h  logger.h  utility.h
src/include/algorithm/: analysis.h  progression.h  sorting.h  substitution.h  validation.h
src/include/io/: database.h  formatter.h  midi.h  noteparser.h
src/include/model/: bigramchordstatistics.h  chord.h  chordstatistics.h  circleoffifths.h  config.h  config_enums.h  octave.h  orderedchord.h  pitch.h  pitchclass.h  pitchiterable.h  pitchset.h  substitution_config.h
src/include/service/: chordlibrary.h  expansion.h  voiceleading.h
src/include/utility/: combinatorics.h  midi_encoding.h  mixedradix.h
src/io/: CMakeLists.txt  database.cpp  formatter.cpp  midi.cpp  noteparser.cpp
src/model/: CMakeLists.txt  bigramchordstatistics.cpp  chordstatistics.cpp  circleoffifths.cpp  orderedchord.cpp  pitch.cpp  pitchclass.cpp  pitchiterable.cpp  pitchset.cpp
src/service/: CMakeLists.txt  chordlibrary.cpp  expansion.cpp  voiceleading.cpp
src/utility/: CMakeLists.txt  combinatorics.cpp
test/: CMakeLists.txt
test/algorithm/: progression_golden_test.cpp  progression_test.cpp  sorting_test.cpp  validation_test.cpp
test/io/: database_test.cpp  formatter_test.cpp  midi_test.cpp  noteparser_test.cpp
test/model/: bigramstats_test.cpp  config_test.cpp  model.cpp  pitchclass.cpp
test/service/: analysis_test.cpp  chordlibrary_test.cpp  expansion_test.cpp  substitution_test.cpp  voiceleading_test.cpp
test/utility/: combinatorics_test.cpp  midi_encoding_test.cpp  mixedradix_test.cpp
